finish the project

--- a/Projectcs131-3/Projectcs131-3.vcxproj
+++ b/Projectcs131-3/Projectcs131-3.vcxproj
@@ -150,7 +150,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MainAmortization.h" />
+    <Library Include="..\Release\Amort.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
