--- a/Projectcs131-3/Projectcs131-3.vcxproj.filters
+++ b/Projectcs131-3/Projectcs131-3.vcxproj.filters
@@ -20,8 +20,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MainAmortization.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <Library Include="..\Release\Amort.lib" />
   </ItemGroup>
 </Project>
